# ggg

./: plot_joint_states.py
fanuc_lrmate_gazebo/: CMakeLists.txt  README.md  package.xml
fanuc_lrmate_gazebo/config/: ros2_controllers.yaml
fanuc_lrmate_gazebo/launch/: lrmate_gazebo.launch.py  lrmate_moveit_gazebo.launch.py
fanuc_lrmate_gazebo/urdf/: lrmate200id7l_gazebo.urdf.xacro
fanuc_lrmate_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
fanuc_lrmate_moveit_config/config/: joint_limits.yaml  lrmate200id7l.srdf
fanuc_lrmate_moveit_config/launch/: demo.launch.py  fanuc_moveit_lrmate.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
