<?xml version="1.0"?>
<package format="3">
  <name>fanuc_lrmate_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation package for FANUC LR Mate 200iD/7L with ros2_control.</description>

  <maintainer email="k2nagano@silver.ocn.ne.jp">naga</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fanuc_lrmate_description</exec_depend>
  <exec_depend>fanuc_lrmate_moveit_config</exec_depend>
  <exec_depend>fanuc_moveit_config</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
